objects/Rental_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <formula>Total_Invoiced__c  -  Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <label>Deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pet_Deposit__c</fullName>
        <label>Pet Deposit</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Amount__c</fullName>
        <label>Rental Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rental_Unit__c</fullName>
        <label>Rental Unit</label>
        <referenceTo>Retail_Unit__c</referenceTo>
        <relationshipLabel>Rental Agreements</relationshipLabel>
        <relationshipName>Rental_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rental_has_pets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rental has pets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Deposit__c</fullName>
        <formula>Pet_Deposit__c  +  Deposit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deposit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Invoiced__c</fullName>
        <label>Total Invoiced</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Payments__c</fullName>
        <label>Total Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Rental Agreement</label>
    <nameField>
        <label>Rental Agreement  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rental Agreements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>